--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="welcome-text" data-aos="fade-down">Welcome to My Portfolio</h1>
         <h2 class="special-name" data-aos="zoom-in">Diksha Salve</h2>
-        <p class="full-stack-text" data-aos="fade-up">I am a Full Stack Developer (Frontend & Backend)</p>
+        <p class="full-stack-text" data-aos="fade-up">I am a Full Stack Developer</p>
         <div class="buttons">
             <button id="toggle-theme">Toggle Dark Mode</button>
             <a href="https://github.com/diksha17-hub" target="_blank" class="github-btn">GitHub Profile</a>
